syntax = "proto3";
package auth;
option go_package = "./pb";

service AuthService {
  rpc VerifyToken(VerifyRequest) returns (VerifyResponse);
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  bool loggedIn = 1;
}

// protoc --go_out=pb --go_opt=paths=source_relative \
//     --go-grpc_out=pb --go-grpc_opt=paths=source_relative \
//     protos/*.proto 